--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -7,5 +7,11 @@
 				"securityType": "API_KEY"
 			}
 		}
+	},
+	"auth": {
+		"chatawsnuxt13adcc8f": {
+			"service": "Cognito",
+			"providerPlugin": "awscloudformation"
+		}
 	}
 }
